fix pillbox label vertical alignment in growth headline card

--- a/scss/partials/_topic_growth_headline.scss
+++ b/scss/partials/_topic_growth_headline.scss
@@ -5,6 +5,10 @@ div.topic-growth-headline {
 
   @include pillbox();
 
+  label.pillbox {
+    padding: 5px 12px;
+  }
+
   div.topic-headline-inner {
     margin-top: 10px;
   }
